syntax = "proto3";
package wavesenterprise;

option java_package = "com.wavesenterprise.transaction.protobuf";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "role.proto";

message GenesisPermitTransaction {
  bytes id = 1;
  bytes target = 2;
  Role role = 3;
  int64 fee = 4;
  int64 timestamp = 5;
  bytes signature = 6;
}